out.txt
--- FAIL: TestRunBadJavaCode (0.37s)
    program_test.go:87: Expected "JavaRunner.java:3: error: ';' expected
        public static void main(String[] args){System.out.println("Hello World")}}
                                                                                ^
        1 error
        error: compilation failed
        " but got "JavaRunner.java:3: error: ';' expected
        public static void main(String[] args){System.out.println("Hello World")
                                                                                ^
        JavaRunner.java:5: error: reached end of file while parsing
        }
         ^
        2 errors
        error: compilation failed
        "
    program_test.go:88: Error at index 111, expected } but was 
FAIL
FAIL	github.com/lkelly93/scheduler/internal/executable	0.964s
ok  	github.com/lkelly93/scheduler/internal/handler	0.005s
FAIL
